@@ -10,11 +10,9 @@ AUX clamd.conf 234 RMD160 b517b05e587637cbdd443f7ca3625d582e32722f SHA1 564b1e2f
 AUX clamd.rc 3825 RMD160 09da23ab2c5ebc7eac4f6f8feaff722e0658ac73 SHA1 073d4535a446d2a309d1503d2cb16ec97d572a02 SHA256 8253fb1a236b3346c1035b4fdc03597dbc44a170d4f871fab1ad2d17c1f355ce
 AUX lib-ld.m4 3417 RMD160 7b412510e7ef9966f70ed29937e3556283128a9b SHA1 8b72b8f5f76e41e4ca0f2521c06c568490894a84 SHA256 18c4c458009da32c9daf0ea332a539e5edc82ba009b6c2faac004626313f00e5
 DIST clamav-0.94.1.tar.gz 21817818 RMD160 268d3b4b00c208f8a9aa3bfaa430eb8d22a4bf33 SHA1 8eed11eb68dc6cb15d4bb12de034a4252dc09373 SHA256 15cd3f5ed349f736b9926dd118d0b8edda7d58fe1f73118d4ffd21b3016f5dea
-DIST clamav-0.94.1rc1.tar.gz 21534700 RMD160 b837748d2e6ef6cc052b386ae326945d8538d0b1 SHA1 01c6a6c7c3bde28948e5e57b6e23939b4b5c742f SHA256 c8aa6ca9fce67ebc5dceb8bc3370132f46cd20d2d0e069882f6b7c25ef44299e
 DIST clamav-0.94.2.tar.gz 22107637 RMD160 ae75e5f546f96b7fd0f76dcf9f4977ec95ba4dba SHA1 82373d25db8b836fd88b2414df43bb0c7192cced SHA256 1aec7fecff375958d067aceeb9782d3ff0be7c13bed0eecf6240fb089f8d268c
 EBUILD clamav-0.94.1.ebuild 5231 RMD160 4939f79b9dc95fa5cab9f5fac5b8761b508c1e43 SHA1 51f5c97a1474eac6f047148f2a6186ce033d1587 SHA256 8486b04ae3e7fe955a3c1da76d33e7db1c56b13025235b86947f0909a58192bd
-EBUILD clamav-0.94.1_rc1.ebuild 5231 RMD160 4939f79b9dc95fa5cab9f5fac5b8761b508c1e43 SHA1 51f5c97a1474eac6f047148f2a6186ce033d1587 SHA256 8486b04ae3e7fe955a3c1da76d33e7db1c56b13025235b86947f0909a58192bd
 EBUILD clamav-0.94.2-r1.ebuild 5231 RMD160 4939f79b9dc95fa5cab9f5fac5b8761b508c1e43 SHA1 51f5c97a1474eac6f047148f2a6186ce033d1587 SHA256 8486b04ae3e7fe955a3c1da76d33e7db1c56b13025235b86947f0909a58192bd
 EBUILD clamav-0.94.2.ebuild 5231 RMD160 4939f79b9dc95fa5cab9f5fac5b8761b508c1e43 SHA1 51f5c97a1474eac6f047148f2a6186ce033d1587 SHA256 8486b04ae3e7fe955a3c1da76d33e7db1c56b13025235b86947f0909a58192bd
-MISC ChangeLog 47733 RMD160 b9a16be8d6363bc76a78ce7a6fdecbd4d788cf34 SHA1 727c9dcc2a8e897301d2dbd5248074c4f3a94a8d SHA256 00233facde8bccf14aab2530dbcb70e2f62a5cee3a2a345b365b8b931948afdf
+MISC ChangeLog 47857 RMD160 28d590dd865a695e8d3bed4a7482c52c7489b676 SHA1 b2adbbb423bdcd7381b4f95e742b8ae383d3d5f0 SHA256 eeb71058cd9cfbf9c4da150a8a7ad94441e441ecbbcb1c5a36965b954d519499
 MISC metadata.xml 184 RMD160 c37bff1fc1cd7139c91dae9b0fa5082e1d81f153 SHA1 cc0a188d9ad2411e78747326c62dd046bd5413c8 SHA256 d51011aa837db802ef539a1321a4af0a4a00879d475b92fd58f3c01df7320b58
